use QLibrary instead of libltdl, merge from trunk rev843,845,854. it may be incomplete, please test

--- a/branches/0.9.4/sim/Makefile.am
+++ b/branches/0.9.4/sim/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = sim 
 lib_LTLIBRARIES = libsim.la
 
-SUBDIRS=png libltdl
+SUBDIRS = png
 
 sim_SOURCES = sim.cpp \
  sim.rc
@@ -51,7 +51,7 @@ sim_rc.o: sim.rc
 endif
 
 sim_LDADD = $(SIM_RC_OBJ) libsim.la
-libsim_la_LIBADD   = $(LIBLTDL) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(EXTRA_LIBS) $(LIB_XML2) $(LIB_XSLT) $(LIBSSL)
+libsim_la_LIBADD   = $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(EXTRA_LIBS) $(LIB_XML2) $(LIB_XSLT) $(LIBSSL)
 
 EXTRA_DIST = \
 	sim-kde.menu \
