move snprintf macro for win32 to misc.h - time to throw snprintf away :)

--- a/trunk/sim.vcproj
+++ b/trunk/sim.vcproj
@@ -1517,6 +1517,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sim\sim_export.h"
+				>
+			</File>
+			<File
 				RelativePath=".\sim\sim_pch.h"
 				>
 				<FileConfiguration
