floaty: removed duplicated source _core: move core events into own header

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -78,6 +78,8 @@ SET(_core_HDRS
         connectwnd.h
         container.h
         core.h
+        core.h
+        core_events.h
         declinedlg.h
         editmail.h
         editphone.h
