jabber events removed the last places where QString::utf8() is not needed

--- a/trunk/plugins/jabber/CMakeLists.txt
+++ b/trunk/plugins/jabber/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(jabber_HDRS
         discoinfo.h
         infoproxy.h
         jabber.h
+        jabber_events.h
         jabber_ssl.h
         jabberaboutinfo.h
         jabberadd.h
