--- a/trunk/plugins/jabber/jabber.vcproj
+++ b/trunk/plugins/jabber/jabber.vcproj
@@ -1502,6 +1502,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\jabber_events.h"
+				>
+			</File>
+			<File
 				RelativePath=".\jabber_pch.h"
 				>
 				<FileConfiguration
