add PIE support to cmake build scripts

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -19,6 +19,8 @@ INCLUDE(SimPlugins)
 INCLUDE(DistTarget)
 INCLUDE(CheckCXXCompilerFlag)
 
+OPTION(SIM_ENABLE_FPIE "Enable PIE linking")
+
 SIM_FIND_PLUGINS(${Sim-IM_SOURCE_DIR}/plugins)
 
 IF(NOT QT_FOUND)
@@ -80,6 +82,16 @@ else(MSVC)
 endif(MSVC)
 
 add_definitions( -DUNICODE )
+
+IF(CMAKE_COMPILER_IS_GNUCXX AND SIM_ENABLE_FPIE)
+    CHECK_CXX_COMPILER_FLAG(-fPIE HAVE_FPIE_SUPPORT)
+    IF(HAVE_FPIE_SUPPORT)
+        SET (SIM_CXX_FPIE_FLAGS "-fPIE")
+        SET (SIM_PIE_LDFLAGS "-pie")
+    ELSE(HAVE_FPIE_SUPPORT)
+        MESSAGE(STATUS "Your compiler doesn't support PIE flag")
+    ENDIF(HAVE_FPIE_SUPPORT)
+ENDIF(CMAKE_COMPILER_IS_GNUCXX AND SIM_ENABLE_FPIE)
 
 OPTION(USE_GCC_VISIBILITY "Enable GCC 4.1 visibility support" FALSE)
 
