--- a/trunk/plugins/remote/CMakeLists.txt
+++ b/trunk/plugins/remote/CMakeLists.txt
@@ -35,6 +35,10 @@ INSTALL(TARGETS remote LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATIO
 #########################
 
 ADD_EXECUTABLE(simctrl simctrl.cpp)
+IF(SIM_ENABLE_FPIE)
+    SET_TARGET_PROPERTIES(simctrl PROPERTIES COMPILE_FLAGS "${SIM_CXX_FPIE_FLAGS}")
+    SET_TARGET_PROPERTIES(simctrl PROPERTIES LINK_FLAGS "${SIM_PIE_LDFLAGS}")
+ENDIF(SIM_ENABLE_FPIE)
 TARGET_LINK_LIBRARIES(simctrl simlib)
 INSTALL(TARGETS simctrl RUNTIME DESTINATION ${BINDIR})
 
