--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -170,6 +170,11 @@ COMPILE_PO_FILES(${CMAKE_SOURCE_DIR}/po sim_EXE_SRCS)
 # sim executable
 ADD_EXECUTABLE(sim WIN32 ${sim_EXE_SRCS})
 
+IF(SIM_ENABLE_FPIE)
+    SET_TARGET_PROPERTIES(sim PROPERTIES COMPILE_FLAGS "${SIM_CXX_FPIE_FLAGS}")
+    SET_TARGET_PROPERTIES(sim PROPERTIES LINK_FLAGS "${SIM_PIE_LDFLAGS}")
+ENDIF(SIM_ENABLE_FPIE)
+
 # only needs simlib
 TARGET_LINK_LIBRARIES(sim simlib ${QT_QTMAIN_LIBRARY})
 
