fixed icon path in qip iconset

--- a/trunk/plugins/_core/qip-icons/Makefile.am
+++ b/trunk/plugins/_core/qip-icons/Makefile.am
@@ -4,5 +4,5 @@ iconsdir=$(kde_datadir)/sim/icons/
 
 all:  qip-icons.jisp
 
-qip-icons.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
+qip-icons.jisp: $(srcdir)/icondef.xml $(srcdir)/*.gif
 	$(ZIP) $(ZIP_FLAGS) $@ $^
