--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -187,6 +187,10 @@ IF(WIN32)
     SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
 ENDIF(WIN32)
 
+IF(NOT WIN32)
+    INSTALL(FILES sim.desktop DESTINATION ${XDG_APPS_DIR})
+ENDIF(NOT WIN32)
+
 # some needed libs for win32
 if(WIN32)
   INSTALL(FILES ${CMAKE_SOURCE_DIR}/install_win32/iconv.dll    DESTINATION ${BINDIR})
