--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -145,7 +145,9 @@ else(WIN32)
     SET(SIM_PICT_DIR   ${DATADIR}/pict)
     SET(SIM_SOUND_DIR  ${DATADIR}/sounds)
     SET(SIM_STYLES_DIR ${DATADIR}/styles)
-    SET(XDG_APPS_DIR   ${CMAKE_INSTALL_PREFIX}/share/applications/kde)
+    SET(SHARE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/share)
+    SET(XDG_APPS_DIR   ${SHARE_INSTALL_PREFIX}/applications/kde)
+    SET(SERVICES_INSTALL_DIR ${SHARE_INSTALL_PREFIX}/services)
 endif(WIN32)	
 	
 # subdirectories
