--- a/trunk/plugins/remote/CMakeLists.txt
+++ b/trunk/plugins/remote/CMakeLists.txt
@@ -41,7 +41,10 @@ IF(SIM_ENABLE_FPIE)
 ENDIF(SIM_ENABLE_FPIE)
 TARGET_LINK_LIBRARIES(simctrl simlib)
 INSTALL(TARGETS simctrl RUNTIME DESTINATION ${BINDIR})
-
+IF(NOT WIN32)
+    INSTALL(FILES simctrl.desktop DESTINATION ${SERVICES_INSTALL_DIR})
+ENDIF(NOT WIN32)
+    
 IF(0)
 #doesn't work yet
 ########################
