--- a/trunk/plugins/msn/msn.vcproj
+++ b/trunk/plugins/msn/msn.vcproj
@@ -469,6 +469,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\msnfiletransfer.cpp"
+				>
+			</File>
+			<File
 				RelativePath="msnhttp.cpp"
 				>
 				<FileConfiguration
