--- a/trunk/plugins/jabber/jabber.vcproj
+++ b/trunk/plugins/jabber/jabber.vcproj
@@ -579,6 +579,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\jabberfiletransfer.cpp"
+				>
+			</File>
+			<File
 				RelativePath="jabberhomeinfo.cpp"
 				>
 				<FileConfiguration
