--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -104,7 +104,8 @@ ELSE(WIN32 AND NOT MINGW)
 ENDIF(WIN32 AND NOT MINGW)
 
 #some needed defines
-ADD_DEFINITIONS(-DSIMAPI_EXPORTS -DNOUNCRYPT)
+SET_TARGET_PROPERTIES(simlib PROPERTIES DEFINE_SYMBOL SIMAPI_EXPORTS)
+ADD_DEFINITIONS(-DNOUNCRYPT)
 
 # additional include dirs - at least ${CMAKE_CURRENT_BINARY_DIR} is needed
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
