--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -166,5 +166,7 @@ ADD_JISP_ARCHIVE(icqlite    icqlite.jisp    _core_SRCS)
 ADD_JISP_ARCHIVE(jisp       sim.jisp        _core_SRCS)
 ADD_JISP_ARCHIVE(smiles     smiles.jisp     _core_SRCS)
 ADD_JISP_ARCHIVE(GPL-Icons  GPL-Icons.jisp  _core_SRCS)
+ADD_JISP_ARCHIVE(qip-icons  qip-icons.jisp  _core_SRCS)
+ADD_JISP_ARCHIVE(lovenmoney lovenmoney.jisp _core_SRCS)
 
 SIM_ADD_PLUGIN(_core)
