--- a/trunk/plugins/styles/metal/metal.vcproj
+++ b/trunk/plugins/styles/metal/metal.vcproj
@@ -58,6 +58,7 @@
 				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4100"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
