--- a/trunk/plugins/styles/wood/wood.vcproj
+++ b/trunk/plugins/styles/wood/wood.vcproj
@@ -144,6 +144,7 @@
 				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4100"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
