* initial Import of complete compatible YIM Emoticon - Set Note: These are orignial animated gif's, which should either be left as they are or additionally converted to an apropriate usable format. * The gif's are published in the web for anybodies use. * Source urls are added.

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -168,5 +168,6 @@ ADD_JISP_ARCHIVE(smiles     smiles.jisp     _core_SRCS)
 ADD_JISP_ARCHIVE(GPL-Icons  GPL-Icons.jisp  _core_SRCS)
 ADD_JISP_ARCHIVE(qip-icons  qip-icons.jisp  _core_SRCS)
 ADD_JISP_ARCHIVE(lovenmoney lovenmoney.jisp _core_SRCS)
+ADD_JISP_ARCHIVE(yahoo      yahoo.jisp      _core_SRCS)
 
 SIM_ADD_PLUGIN(_core)
