--- a/branches/0.9.4/CMakeLists.txt
+++ b/branches/0.9.4/CMakeLists.txt
@@ -65,7 +65,7 @@ MACRO_BOOL_TO_01(X11_FOUND HAVE_X)
 MACRO_BOOL_TO_01(USE_KDE3 USE_KDE)
 
 # development or release builds
-OPTION(DEV_BUILD "Build development version" NO)
+OPTION(DEV_BUILD "Build development version" YES)
 MACRO_BOOL_TO_01(DEV_BUILD CVS_BUILD)
 
 # global settings for every project
