--- a/branches/0.9.4/CMakeLists.txt
+++ b/branches/0.9.4/CMakeLists.txt
@@ -14,7 +14,7 @@ INCLUDE(MacroEnsureOutOfSourceBuild)
 
 IF(NOT WIN32)
 	MACRO_ENSURE_OUT_OF_SOURCE_BUILD("SIM-IM requires an out of source build. Please create a separate build directory and run 'cmake path_to_sim_im [options]' there.")
-ENDIF(WIN32)
+ENDIF(NOT WIN32)
 
 INCLUDE(Flex)
 INCLUDE(Jisp)
