make yahoo icons work. please test in Linux!

--- a/trunk/plugins/_core/_core.vcproj
+++ b/trunk/plugins/_core/_core.vcproj
@@ -7693,7 +7693,7 @@
 						<Tool
 							Name="VCCustomBuildTool"
 							Description="Make lovenmoney.jisp"
-							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\lovenmoney.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.png $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\lovenmoney.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp&#x0D;&#x0A;"
 							Outputs="$(OutDir)\icons\lovenmoney.jisp"
 						/>
 					</FileConfiguration>
@@ -7738,6 +7738,387 @@
 				</File>
 				<File
 					RelativePath=".\lovenmoney\Money_0041.png"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="yahoo"
+				>
+				<File
+					RelativePath=".\yahoo\alien.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\angel.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\angry.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\applause.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\april.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\at_wits&apos;_end.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\batting_eyelashes.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\big_grin.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\big_hug.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\billy.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\blushing.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\bring_it_on.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\broken_heart.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\bug.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\call_me.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\chatterbox.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\chicken.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\clown.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\coffee.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\confused.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\cool.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\cow.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\cowboy.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\crying.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\d&apos;oh.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\dancing.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\daydreaming.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\devil.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\don&apos;t_tell_anyone.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\drooling.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\feeling_beat_up.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\flag.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\frustrated.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\good_luck.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\happy.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\hee_hee.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\hiro.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\hypnotized.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\I_don&apos;t_know.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\icondef.xml"
+					>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCustomBuildTool"
+							Description="Make yahoo.jisp"
+							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.gif $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\yahoo.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+							AdditionalDependencies=""
+							Outputs="$(OutDir)\icons\yahoo.jisp"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCustomBuildTool"
+							Description="Make yahoo.jisp"
+							CommandLine="mkdir $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)*.gif $(IntDir)\jisp&#x0D;&#x0A;copy $(InputDir)icondef.xml $(IntDir)\jisp&#x0D;&#x0A;jar -cMf $(OutDir)\icons\yahoo.jisp -C $(IntDir)\jisp .&#x0D;&#x0A;del /Q $(IntDir)\jisp\*.*&#x0D;&#x0A;rmdir /Q $(IntDir)\jisp"
+							Outputs="$(OutDir)\icons\yahoo.jisp"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\yahoo\idea.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\kiss.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\laughing.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\liar.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\loser.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\love_struck.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\money_eyes.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\monkey.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\nailbiting.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\nerd.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\not_listening.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\not_talking.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\not_worthy.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\oh_go_on.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\on_the_phone.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\party.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\peace_sign.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\phbbbbt.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\pig.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\praying.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\pumpkin.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\puppy_dog_eyes.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\raised_eyebrow.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\rolling_eyes.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\rolling_on_the_floor.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\rose.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\sad.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\shame_on_you.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\sick.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\sigh.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\silly.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\skull.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\sleepy.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\smug.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\star.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\straight_face.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\surprise.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\talk_to_the_hand.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\thinking.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\time_out.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\tongue.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\waiting.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\wave.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\whew!.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\whistling.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\winking.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\worried.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\yawn.gif"
+					>
+				</File>
+				<File
+					RelativePath=".\yahoo\yin_yang.gif"
 					>
 				</File>
 			</Filter>
